Refactor CSS to fix layout bugs

--- a/style.css
+++ b/style.css
@@ -1,17 +1,35 @@
+@import 'reset.css';
+
 body, html {
-  color: #001F3F;
+  color: #001f3f;
   font-family: 'Noto Sans JP', sans-serif;
   height: 100%;
   margin: 0;
 }
 
+h1 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
 h1, h3 {
-  color: #6DB4FD;
+  color: #6db4fd;
+  margin: 25px 0;
 }
 
 header {
-  background: #001F3F;
-  padding: 20px 35px;
+  background: #001f3f;
+  padding: 35px;
 }
 
 .main-wrap {
@@ -22,23 +40,43 @@ header {
 
 aside {
   background: white;
-  border-right: 2px solid #808F9F;
-  padding: 20px 35px;
+  border-right: 2px solid #808f9f;
+  padding: 35px;
 }
 
 form {
-  margin-top: 19.92px;
+  display: grid;
+  grid-gap: 16px;
 }
 
 section {
-  background: linear-gradient(to bottom right, #DFE3E7, #9FABB7);
-  padding: 20px 35px;
+  background: linear-gradient(to bottom right, #dfe3e7, #9fabb7);
+  padding: 35px;
 }
 
 ul {
   list-style: none;
+  display: grid;
+  grid-gap: 8px;
+}
+
+li:first-child {
+  margin-top: 16px;
+}
+
+li strong {
+  font-weight: bold;
 }
 
 label, input {
   width: 100%;
+}
+
+input {
+  padding: 5px;
+  width: inherit;
+}
+
+input[type='submit'] {
+  cursor: pointer;
 }
