--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ h1, h3 {
   margin: 25px 0;
 }
 
+h4 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 25px;
+}
+
 header {
   background: #001f3f;
   padding: 35px;
